# neural-network-from-scratch

./: CMakeLists.txt
include/: tensor.h
src/: main.cpp  tensor.cpp
